--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -22,7 +22,7 @@ title: Nate Dileas
 email: ndileas@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
   You can read words here.
-baseurl: "/docs" # the subpath of your site, e.g. /blog
+baseurl: "/" # the subpath of your site, e.g. /blog
 url: "https://natedileas.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 domain: natedileas.github.io
 github_username:  natedileas
